--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,31 @@
 services:
-    app:
-        build: .
-        working_dir: /var/www
+    laravel_app_innoscripta:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: laravel_app_innoscripta
+        ports:
+            - "8000:8000"
         volumes:
-            - .:/var/www
+            - .:/var/www/html
         depends_on:
             - mysql
-        network_mode: "host"
+        command: php artisan serve --host=0.0.0.0 --port=8000
 
     mysql:
-        image: mysql:8
+        image: mysql:8.1.0
+        container_name: laravel_mysql_innoscripta
+        ports:
+            - "3306:3306"
         environment:
             MYSQL_ROOT_PASSWORD: password
             MYSQL_DATABASE: innoscripta
-        network_mode: "host"
+        volumes:
+            - mysql_innoscripta_data:/var/lib/mysql
 
+volumes:
+    mysql_innoscripta_data:
 
+networks:
+    laravel_network:
+        driver: bridge
