--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "rakutentech/laravel-request-docs": "^2.41"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -18,8 +19,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^11.0.1",
-        "rakutentech/laravel-request-docs": "^2.41"
+        "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
         "psr-4": {
